--- a/dz5.7/Dockerfile
+++ b/dz5.7/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu
 RUN apt update && \
-    apt install -y wget gnupg2
+    apt install -qy wget gnupg2
 RUN wget https://dl.google.com/linux/linux_signing_key.pub && \
     apt-key add linux_signing_key.pub
 RUN echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > \
@@ -9,5 +9,12 @@ ENV TZ=Europe/Kiev
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
     echo $TZ > /etc/timezone
 RUN apt update && \
-    apt install -y google-chrome-stable
+    apt install -qy google-chrome-stable
+RUN usr/sbin/useradd \
+    --home /home/user \
+    --create-home \
+    --comment "google-chrome" \
+    --shell /bin/bash \
+    user
+USER user
 CMD ["/usr/bin/google-chrome","--no-sandbox"]
